--- a/layout/includes/head/config_site.pug
+++ b/layout/includes/head/config_site.pug
@@ -23,5 +23,5 @@ script#config-diff.
     isHome: !{is_home()},
     isHighlightShrink: !{isHighlightShrink},
     isToc: !{showToc},
-    isShuoshuo: !{page.type == 'shuoshuo'}
+    postUpdate: '!{full_date(page.updated)}'
   }
