--- a/layout/includes/header/post-info.pug
+++ b/layout/includes/header/post-info.pug
@@ -7,8 +7,13 @@
 
   #post-meta
     .meta-firstline
+      if theme.post_meta.post.author
+        i.fa-solid.fa-user
+        span.post-meta-author=page.author
       if theme.post_meta.post.date_type
         span.post-meta-date
+          if theme.post_meta.post.author
+            span.post-meta-separator |
           if theme.post_meta.post.date_type === 'both'
             i.far.fa-calendar-alt.fa-fw.post-meta-icon
             span.post-meta-label= _p('post.created')
@@ -60,7 +65,39 @@
           if block
             block
 
-      mixin otherPV()
+      - const commentUse = comments.use && comments.use[0]
+      if page.comments !== false && commentUse && !comments.lazyload
+        case commentUse
+          when 'Valine'
+            if theme.valine.visitor
+              +pvBlock(url_for(page.path), 'leancloud_visitors', page.title)
+                span.leancloud-visitors-count
+                  i.fa-solid.fa-spinner.fa-spin
+          when 'Waline'
+            if theme.waline.pageview
+              +pvBlock('', '', '')
+                span.waline-pageview-count(data-path=url_for(page.path))
+                  i.fa-solid.fa-spinner.fa-spin
+          when 'Twikoo'
+            if theme.twikoo.visitor
+              +pvBlock('', '', '')
+                span#twikoo_visitors
+                  i.fa-solid.fa-spinner.fa-spin
+          when 'Artalk'
+            if theme.artalk.visitor
+              +pvBlock('', '', '')
+                span#ArtalkPV
+                  i.fa-solid.fa-spinner.fa-spin
+          default
+            if theme.umami_analytics.enable && theme.umami_analytics.UV_PV.page_pv
+              +pvBlock('', '', '')
+                span#umamiPV(data-path=url_for(page.path))
+                  i.fa-solid.fa-spinner.fa-spin
+            else if theme.busuanzi.page_pv
+              +pvBlock('', 'post-meta-pv-cv', '')
+                span#busuanzi_value_page_pv
+                  i.fa-solid.fa-spinner.fa-spin
+      else
         if theme.umami_analytics.enable && theme.umami_analytics.UV_PV.page_pv
           +pvBlock('', '', '')
             span#umamiPV(data-path=url_for(page.path))
@@ -69,29 +106,6 @@
           +pvBlock('', 'post-meta-pv-cv', '')
             span#busuanzi_value_page_pv
               i.fa-solid.fa-spinner.fa-spin
-
-      - const commentUse = comments.use && comments.use[0]
-      if page.comments !== false && commentUse && !comments.lazyload
-        if commentUse === 'Valine' && theme.valine.visitor
-          +pvBlock(url_for(page.path), 'leancloud_visitors', page.title)
-            span.leancloud-visitors-count
-              i.fa-solid.fa-spinner.fa-spin
-        else if commentUse === 'Waline' && theme.waline.pageview
-          +pvBlock('', '', '')
-            span.waline-pageview-count(data-path=url_for(page.path))
-              i.fa-solid.fa-spinner.fa-spin
-        else if commentUse === 'Twikoo' && theme.twikoo.visitor
-          +pvBlock('', '', '')
-            span#twikoo_visitors
-              i.fa-solid.fa-spinner.fa-spin
-        else if commentUse === 'Artalk' && theme.artalk.visitor
-          +pvBlock('', '', '')
-            span#ArtalkPV
-              i.fa-solid.fa-spinner.fa-spin
-        else
-          +otherPV()
-      else
-        +otherPV()
 
       if comments.count && !comments.lazyload && page.comments !== false && comments.use
         - var whichCount = comments.use[0]
