--- a/source/css/_search/index.styl
+++ b/source/css/_search/index.styl
@@ -19,6 +19,9 @@
     height: 100%
     border-radius: 0
 
+  hr
+    margin: 20px auto
+
   .search-nav
     margin: 0 0 14px
     color: $search-color
@@ -37,7 +40,7 @@
         color: $search-color
   
   hr
-    margin: 15px auto
+    margin: 20px auto
     @extend .custom-hr
 
 #search-mask
