--- a/layout/includes/page/flink.pug
+++ b/layout/includes/page/flink.pug
@@ -1,4 +1,4 @@
-#article-container.container
+#article-container
   .flink
     - let { content, random, flink_url } = page
     - let pageContent = content
