--- a/layout/post.pug
+++ b/layout/post.pug
@@ -5,11 +5,7 @@ block content
     if top_img === false
       include includes/header/post-info.pug
 
-    article#article-container.container.post-content
-      if theme.noticeOutdate.enable && page.noticeOutdate !== false 
-        include includes/post/outdate-notice.pug
-      else
-        !=page.content
+    article#article-container.post-content!=page.content
     include includes/post/post-copyright.pug
     .tag_share
       if (page.tags.length > 0 && theme.post_meta.post.tags)
