--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -179,11 +179,14 @@ if $site-name-font
   #aside-content .author-info-description
     font-family: $site-name-font
 
-.text-center
+.is-center
   text-align: center
 
-.text-right
-  text-align: right
+.pull-left
+  float: left
+
+.pull-right
+  float: right
 
 img
   &[src=''],
